--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <main class="column">
         <article class="row">
-            <div class="col-8">
+            <div class="col-8" id="felepites">
                 <p>A hőlégballon (hőléggömb) egy speciális léggömb (légballon), amelynél a töltőgáz meleg levegő.
                     Kedvelt sporteszköz, tudományos célokra ritkán alkalmazzák.
                 </p>
@@ -66,7 +66,7 @@
             <div class="col-4">
                 <img class="img-fluid rounded mb-3 mx-auto d-block arnyek" src="img/reszei.jpg" alt="">
             </div>
-            <div class="col-12">
+            <div class="col-12" id="tortenet">
                 <h2>A hőlégballon rövid története</h2>
                 <p>Az első hőlégballon kezdeményt a kínaiak használták az ún. három királyság idején Kongming lámpások
                     formájában. Ezek kis méretű, belsejükben mécsest tartalmazó lámpások voltak, amelyeket katonai
