--- a/services.html
+++ b/services.html
@@ -62,6 +62,7 @@
             <tr></tr>
             </tr>
         </table>
+        <button onclick="press()"></button>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
